# parami-blockchain

./: .codecov.yml  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Parachain.md  README.md  bors.toml  package-lock.json  package.json  parami-types.json  tsconfig.json
.github/: bors.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/prepare/: action.yml
.github/workflows/: actions.yml  build.yml  cancel.yml  coverage.yml  deploy.yml  lint.yml  release.yml  rust.yml
.maintain/: benchmark.ps1  benchmark.sh  e2e.sh  frame-weight-template.hbs
bench/: Cargo.toml
bench/src/: construct.rs  core.rs  generator.rs  import.rs  main.rs  simple_trie.rs  trie.rs  txpool.rs
browser-testing/: Cargo.toml
browser-testing/src/: lib.rs
cli/: Cargo.toml
cli/browser-demo/: build.sh  index.html
cli/src/: browser.rs  chain_spec.rs  cli.rs  command.rs  service.rs
cli/tests/: build_spec_works.rs  check_block_works.rs  common.rs  export_import_flow.rs  inspect_works.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs  temp_base_path_works.rs  version.rs
e2e/: .gitignore  index.js  package.json  utils.js
executor/: Cargo.toml
executor/benches/: bench.rs
executor/src/: lib.rs
executor/tests/: basic.rs  common.rs  fees.rs  submit_transaction.rs
inspect/: Cargo.toml
inspect/src/: command.rs  lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
nodes/dana/: Cargo.toml
nodes/dana/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
nodes/para/: Cargo.toml
nodes/para/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
orml/: READMD.md
orml/auction/: Cargo.toml
orml/auction-manager/: Cargo.toml
orml/auction/src/: lib.rs
orml/nft/: Cargo.toml
orml/nft/src/: lib.rs  mock.rs  tests.rs
orml/traits/: Cargo.toml
orml/traits/src/: auction.rs  lib.rs
pallets/ad/: Cargo.toml
pallets/ad/runtime-api/: Cargo.toml
pallets/ad/runtime-api/src/: lib.rs
pallets/ad/src/: benchmarking.rs  constants.rs  lib.rs  migrations.rs  mock.rs  tests.rs  types.rs  utils.rs  weights.rs
pallets/advertiser/: Cargo.toml
pallets/advertiser/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/airdrop/: Cargo.toml
pallets/airdrop/src/: lib.rs
pallets/assetmanager/: Cargo.toml
pallets/assetmanager/src/: lib.rs  migrations.rs  mock.rs  tests.rs
pallets/assets/: Cargo.toml
pallets/assets/src/: benchmarking.rs  functions.rs  impl_fungibles.rs  impl_stored_map.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/auction/: Cargo.toml
pallets/auction/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs  mock.rs  tests.rs
pallets/chainbridge/: Cargo.toml  README.md
pallets/chainbridge/src/: lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/clockin/: Cargo.toml
pallets/clockin/runtime-api/: Cargo.toml
pallets/clockin/runtime-api/src/: lib.rs
pallets/clockin/src/: lib.rs  migrations.rs  mock.rs  tests.rs  types.rs
pallets/cross-assets/: Cargo.toml  README.md
pallets/cross-assets/src/: lib.rs
pallets/did/: Cargo.toml  README.md
pallets/did/rpc/: Cargo.toml
pallets/did/rpc/src/: lib.rs
pallets/did/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/did/utils/: Cargo.toml
pallets/did/utils/src/: lib.rs
pallets/linker/: Cargo.toml
pallets/linker/artifacts/: telegram.html  twitter.html
pallets/linker/src/: benchmarking.rs  btc.rs  did.rs  functions.rs  impl_links.rs  impls.rs  lib.rs  migrations.rs  mock.rs  ocw.rs  tests.rs  types.rs  weights.rs  witness.rs
pallets/linker/src/btc/: base58.rs  legacy.rs  witness.rs
pallets/linker/src/eth/: mod.rs
pallets/linker/src/tests/: btc.rs  eth.rs  mod.rs
pallets/magic/: Cargo.toml
pallets/magic-link/: Cargo.toml
pallets/magic-link/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/magic/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/nft/: Cargo.toml
pallets/nft/rpc/: Cargo.toml
pallets/nft/rpc/runtime-api/: Cargo.toml
pallets/nft/rpc/runtime-api/src/: lib.rs
pallets/nft/rpc/src/: lib.rs
pallets/nft/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  ocw.rs  tests.rs  types.rs  weights.rs
pallets/nft/src/ocw/: abi.rs  mod.rs  types.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs  mock.rs  tests.rs
pallets/stake/: Cargo.toml
pallets/stake/src/: lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/swap/: Cargo.toml  README.md
pallets/swap/rpc/: Cargo.toml
pallets/swap/rpc/runtime-api/: Cargo.toml
pallets/swap/rpc/runtime-api/src/: lib.rs
pallets/swap/rpc/src/: lib.rs
pallets/swap/src/: benchmarking.rs  farming.rs  functions.rs  impl_swaps.rs  lib.rs  migrations.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/tag/: Cargo.toml
pallets/tag/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs
pallets/traits/: Cargo.toml
pallets/traits/src/: accounts.rs  lib.rs  links.rs  nfts.rs  stakes.rs  swaps.rs  tags.rs  transferable.rs
pallets/xassets/: Cargo.toml  bridge.json
pallets/xassets/src/: lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
primitives/: Cargo.toml
primitives/src/: constants.rs  enums.rs  lib.rs  names.rs
primitives/src/signature/: mod.rs  test.rs
rpc/: Cargo.toml
rpc-client/: Cargo.toml
rpc-client/src/: main.rs
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: constants.rs  impls.rs  lib.rs
runtime/src/weights/: module_nft.rs
runtimes/dana/: Cargo.toml
runtimes/para/: Cargo.toml
scripts/: try-runtime.py
spec/: dana-parami-raw.json
testing/: Cargo.toml
testing/src/: bench.rs  client.rs  genesis.rs  keyring.rs
tutils/: Cargo.toml
tutils/src/: bench.rs  client.rs
utils/: ad_claim_e2e.ts  e2e.ts  swap_e2e.ts  upgrade.ts  utils.ts
(+5 files in other folders)
