[profile.release]
panic = 'unwind'

[workspace]
members = [
    'nodes/dana',
    'nodes/para',
    'pallets/*',
    'primitives',
    'runtimes/dana',
    'runtimes/para',
]

[patch.'https://github.com/paritytech/substrate']
beefy-gadget = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
beefy-gadget-rpc = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
beefy-merkle-tree = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
beefy-primitives = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
chain-spec-builder = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
fork-tree = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-benchmarking = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-benchmarking-cli = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-election-provider-support = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-executive = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-support = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-support-procedural = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-support-procedural-tools = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-support-procedural-tools-derive = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-support-test = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-support-test-compile-pass = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-support-test-pallet = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-system = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-system-benchmarking = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-system-rpc-runtime-api = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
frame-try-runtime = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
generate-bags = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-bench = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-cli = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-executor = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-inspect = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-primitives = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-rpc = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-runtime = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-runtime-generate-bags = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-template = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-template-runtime = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
node-testing = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-asset-tx-payment = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-assets = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-atomic-swap = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-aura = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-authority-discovery = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-authorship = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-babe = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-bags-list = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-bags-list-fuzzer = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-bags-list-remote-tests = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-balances = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-beefy = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-beefy-mmr = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-bounties = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-collective = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-contracts = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-contracts-primitives = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-contracts-proc-macro = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-contracts-rpc = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-contracts-rpc-runtime-api = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-democracy = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-election-provider-multi-phase = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-elections = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-elections-phragmen = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-example-basic = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-example-offchain-worker = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-example-parallel = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-gilt = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-grandpa = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-identity = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-im-online = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-indices = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-lottery = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-membership = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-mmr = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-mmr-primitives = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-mmr-rpc = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-multisig = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-nicks = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-node-authorization = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-offences = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-offences-benchmarking = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-proxy = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-randomness-collective-flip = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-recovery = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-scheduler = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-scored-pool = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-session = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-session-benchmarking = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-society = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-staking = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-staking-reward-curve = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-staking-reward-fn = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-sudo = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-template = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-timestamp = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-tips = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-transaction-payment = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-transaction-payment-rpc = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-transaction-storage = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-treasury = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-uniques = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-utility = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
pallet-vesting = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
remote-externalities = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-allocator = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-authority-discovery = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-basic-authorship = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-block-builder = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-chain-spec = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-chain-spec-derive = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-cli = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-client-api = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-client-db = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus-aura = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus-babe = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus-babe-rpc = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus-epochs = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus-manual-seal = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus-pow = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus-slots = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-consensus-uncles = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-executor = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-executor-common = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-executor-wasmi = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-executor-wasmtime = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-finality-grandpa = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-finality-grandpa-rpc = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-informant = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-keystore = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-network = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-network-gossip = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-network-test = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-offchain = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-peerset = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-proposer-metrics = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-rpc = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-rpc-api = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-rpc-server = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-runtime-test = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-service = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-service-test = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-state-db = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-sync-state-rpc = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-telemetry = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-tracing = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-tracing-proc-macro = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-transaction-pool = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-transaction-pool-api = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sc-utils = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-api = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-api-proc-macro = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-api-test = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-application-crypto = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-application-crypto-test = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-arithmetic = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-arithmetic-fuzzer = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-authority-discovery = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-authorship = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-block-builder = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-blockchain = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-consensus = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-consensus-aura = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-consensus-babe = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-consensus-pow = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-consensus-slots = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-consensus-vrf = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-core = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-core-hashing = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-core-hashing-proc-macro = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-database = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-debug-derive = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-externalities = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-finality-grandpa = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-inherents = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-io = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-keyring = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-keystore = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-maybe-compressed-blob = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-npos-elections = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-npos-elections-fuzzer = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-npos-elections-solution-type = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-offchain = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-panic-handler = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-rpc = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-runtime = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-runtime-interface = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-runtime-interface-proc-macro = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-runtime-interface-test = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-runtime-interface-test-wasm = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-runtime-interface-test-wasm-deprecated = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-sandbox = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-serializer = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-session = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-staking = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-state-machine = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-std = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-storage = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-tasks = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-test-primitives = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-timestamp = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-tracing = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-transaction-pool = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-transaction-storage-proof = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-trie = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-version = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-version-proc-macro = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
sp-wasm-interface = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
subkey = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-build-script-utils = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-frame-cli = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-frame-rpc-support = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-frame-rpc-system = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-prometheus-endpoint = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-test-client = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-test-runtime = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-test-runtime-client = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-test-runtime-transaction-pool = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-test-utils = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-test-utils-derive = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-test-utils-test-crate = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
substrate-wasm-builder = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
test-runner = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
test-runner-example = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
try-runtime-cli = { git = 'https://github.com/parami-protocol/substrate', branch = 'polkadot-v0.9.13' }
