[workspace]
members = [
    'nodes/dana',
    'nodes/para',
    'pallets/*',
    'primitives',
    'runtimes/dana',
    'runtimes/para',
]

[profile.dev]
debug = 0

[profile.release]
panic = 'unwind'
incremental = true
debug = 0

[profile.test]
debug = 0

[profile.bench]
panic = 'unwind'
incremental = true
debug = 0
