[package]
name = "parami-bench"
version = "0.8.0"
authors = ["Parami Devs <info@parami.io>"]
description = "Substrate node integration benchmarks."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
serde = "1.0.101"
serde_json = "1.0.41"
structopt = "0.3"
derive_more = "0.99.2"
kvdb = "0.9.0"
kvdb-rocksdb = "0.11.0"
hash-db = "0.15.2"
tempfile = "3.1.0"
fs_extra = "1"
hex = "0.4.0"
rand = { version = "0.7.2", features = ["small_rng"] }
lazy_static = "1.4.0"
parity-util-mem = { version = "0.9.0", default-features = false, features = ["primitive-types"] }
parity-db = { version = "0.2.2" }
futures = { version = "0.3.4", features = ["thread-pool"] }
parami-primitives = { version = "2.0.0", path = "../primitives" }
parami-testing = { version = "2.0.0", path = "../testing" }
parami-runtime = { version = "2.0.0", path = "../runtime" }
sc-cli = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-trie = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", version = "3.0.0", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
