[package]
name = "parami-browser-testing"
version = "2.0.0"
authors = ["Parami Devs <info@parami.io>"]
description = "Tests for the in-browser light client."
edition = "2018"
license = "Apache-2.0"

[dependencies]
futures-timer = "3.0.2"
libp2p = { version = "0.34.0", default-features = false }
jsonrpc-core = "15.0.0"
serde = "1.0.106"
serde_json = "1.0.48"
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.18"
wasm-bindgen-test = "0.3.18"
futures = "0.3.9"

parami-cli = { path = "../cli", default-features = false, features = ["browser"] , version = "2.0.0"}
sc-rpc-api = { version = "0.9.0"}
