[package]
name = "parami-cli"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic Substrate node implementation in Rust."
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "substrate"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "substrate"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
parking_lot = "0.11.1"

# primitives
sp-authority-discovery = { version = "3.0.0" }
sp-consensus-babe = { version = "0.9.0" }
grandpa-primitives = { version = "3.0.0", package = "sp-finality-grandpa" }
sp-core = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-timestamp = { version = "3.0.0", default-features = false }
sp-inherents = { version = "3.0.0" }
sp-keyring = { version = "3.0.0" }
sp-keystore = { version = "0.9.0" }
sp-io = { version = "3.0.0" }
sp-consensus = { version = "0.9.0" }
sp-transaction-pool = { version = "3.0.0" }

# client dependencies
sc-client-api = { version = "3.0.0" }
sc-chain-spec = { version = "3.0.0" }
sc-consensus = { version = "0.9.0" }
sc-transaction-pool = { version = "3.0.0" }
sc-network = { version = "0.9.0" }
sc-consensus-slots = { version = "0.9.0" }
sc-consensus-babe = { version = "0.9.0" }
grandpa = { version = "0.9.0", package = "sc-finality-grandpa" }
sc-client-db = { version = "0.9.0", default-features = false }
sc-offchain = { version = "3.0.0" }
sc-rpc = { version = "3.0.0" }
sc-basic-authorship = { version = "0.9.0" }
sc-service = { version = "0.9.0", default-features = false }
sc-tracing = { version = "3.0.0" }
sc-telemetry = { version = "3.0.0" }
sc-authority-discovery = { version = "0.9.0" }
sc-finality-grandpa-warp-sync = { version = "0.9.0", optional = true }

# frame dependencies
pallet-indices = { version = "3.0.0" }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-contracts = { version = "3.0.0" }
frame-system = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }
pallet-transaction-payment = { version = "3.0.0" }
frame-support = { version = "3.0.0", default-features = false }
pallet-im-online = { version = "3.0.0", default-features = false }
pallet-authority-discovery = { version = "3.0.0" }
pallet-staking = { version = "3.0.0" }
pallet-grandpa = { version = "3.0.0" }

# parami-specific dependencies
parami-runtime = { version = "2.0.0", path = "../runtime" }
parami-rpc = { version = "2.0.0", path = "../rpc" }
parami-primitives = { version = "2.0.0", path = "../primitives" }
parami-executor = { version = "2.0.0", path = "../executor" }

# CLI-specific dependencies
sc-cli = { version = "0.9.0", optional = true }
frame-benchmarking-cli = { version = "3.0.0", optional = true }
parami-inspect = { version = "0.8.0", optional = true, path = "../inspect" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
browser-utils = { package = "substrate-browser-utils", optional = true, version = "0.9.0"}

[target.'cfg(target_arch="x86_64")'.dependencies]
parami-executor = { version = "2.0.0", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { version = "0.9.0", optional = true, features = [ "wasmtime" ] }
sc-service = { version = "0.9.0", default-features = false, features = [ "wasmtime" ] }
sp-trie = { version = "3.0.0", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { version = "3.0.0" }
sc-consensus = { version = "0.9.0" }
sc-consensus-babe = { version = "0.9.0", features = ["test-helpers"] }
sc-consensus-epochs = { version = "0.9.0" }
sc-service-test = { version = "2.0.0", git = "https://github.com/parami-protocol/sc-test-utils.git" }
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.19"
serde_json = "1.0"
regex = "1"
platforms = "1.1"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
parami-inspect = { version = "0.8.0", optional = true, path = "../inspect" }
frame-benchmarking-cli = { version = "3.0.0", optional = true }
substrate-build-script-utils = { version = "3.0.0", optional = true }
substrate-frame-cli = { version = "3.0.0", optional = true }
sc-cli = { version = "0.9.0", optional = true }

[features]
default = [ "cli" ]
browser = [
	"browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
]
cli = [
	"parami-executor/wasmi-errno",
	"parami-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"sc-finality-grandpa-warp-sync",
	"structopt",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"parami-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
